--- a/info.plist
+++ b/info.plist
@@ -3,112 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>contactEmailRot13</key>
-	<string>wjuvgybpx@ncnpur.bet</string>
+	<string>fgsnvel@tznvy.pbz</string>
 	<key>contactName</key>
-	<string>Jeremy Whitlock</string>
+	<string>Xiao Jia</string>
 	<key>description</key>
-	<string>Support for &lt;a href="http://developer.mozilla.org/en/docs/About_JavaScript"&gt;JavaScript&lt;/a&gt;.</string>
-	<key>mainMenu</key>
-	<dict>
-		<key>items</key>
-		<array>
-			<string>D2E6A1FE-2881-4754-B399-B65F61F29C2F</string>
-			<string>43F40EB6-5839-4BE8-99C8-4976D0534E5D</string>
-			<string>52090C49-D8B2-49A0-9597-80574354B3CD</string>
-			<string>------------------------------------</string>
-			<string>B4874A14-2491-465A-A349-61E4EBCF4700</string>
-			<string>------------------------------------</string>
-			<string>36EC03E9-EFF4-479A-AB90-8DFA16800642</string>
-			<string>20E61C43-B81F-4FB9-9362-BFFE668EB9C9</string>
-		</array>
-		<key>submenus</key>
-		<dict>
-			<key>43F40EB6-5839-4BE8-99C8-4976D0534E5D</key>
-			<dict>
-				<key>items</key>
-				<array>
-					<string>B2225C2E-59BD-4AD5-9554-755A9864D7F1</string>
-					<string>923442DA-69C2-4681-B57D-510BB1312E9E</string>
-					<string>C4CA6356-DBC9-4F0D-AA9B-8577692DEBB2</string>
-					<string>0701FB35-5C3C-453D-9ADE-8A0B7D1E617E</string>
-				</array>
-				<key>name</key>
-				<string>DOM</string>
-			</dict>
-			<key>52090C49-D8B2-49A0-9597-80574354B3CD</key>
-			<dict>
-				<key>items</key>
-				<array>
-					<string>009A3E6C-FE3F-4A18-8759-2DC31F17BBE2</string>
-					<string>3A00B409-6E94-4E27-8050-45F04EB9765A</string>
-				</array>
-				<key>name</key>
-				<string>BOM</string>
-			</dict>
-			<key>66778C58-CE08-4F21-AD36-562149AEEE80</key>
-			<dict>
-				<key>items</key>
-				<array>
-					<string>4C6EDB43-3E2E-411B-A016-13C135C59833</string>
-					<string>F0E4FB6A-4878-48C6-A777-62438DF1E14F</string>
-					<string>------------------------------------</string>
-					<string>73951799-AC15-40A6-81DB-EC051AB4A033</string>
-					<string>1717B5AE-209B-4548-9155-9E88A7230C1C</string>
-					<string>------------------------------------</string>
-					<string>77065D69-742A-4FF0-9A41-AD211DFBE72F</string>
-				</array>
-				<key>name</key>
-				<string>Function</string>
-			</dict>
-			<key>7699AC1A-80AC-4120-A375-9371D1591F79</key>
-			<dict>
-				<key>items</key>
-				<array>
-					<string>F19F3732-39A7-48EC-A72B-A8F477A01795</string>
-					<string>5BA406DB-A4B1-4CED-BA61-33D378FD7F53</string>
-					<string>31964029-9D71-4ADC-8213-DFE5C4E222B3</string>
-					<string>13386ECB-2A5C-4881-9D54-035BC8B0A4A1</string>
-					<string>------------------------------------</string>
-					<string>011C4681-FBEC-4891-9326-3DECFCDED6D6</string>
-					<string>C207B7C3-5597-4873-8AAD-C46FB8842AF2</string>
-					<string>3AFF0ECE-A475-4CFB-832B-EE551D90B8E5</string>
-					<string>009514ED-12AE-440F-811E-CD7D41368DBF</string>
-					<string>0FF6F54D-AFE0-4FC5-9A15-E837A167689C</string>
-					<string>------------------------------------</string>
-					<string>4B1F658D-CB1C-4D10-968D-A443F8597C28</string>
-					<string>------------------------------------</string>
-					<string>C1FE098B-501D-4567-B024-5C9C394898E5</string>
-				</array>
-				<key>name</key>
-				<string>Control</string>
-			</dict>
-			<key>D2E6A1FE-2881-4754-B399-B65F61F29C2F</key>
-			<dict>
-				<key>items</key>
-				<array>
-					<string>7699AC1A-80AC-4120-A375-9371D1591F79</string>
-					<string>EC690F46-1906-4F55-9089-3C2929D5BB69</string>
-					<string>66778C58-CE08-4F21-AD36-562149AEEE80</string>
-				</array>
-				<key>name</key>
-				<string>Core</string>
-			</dict>
-			<key>EC690F46-1906-4F55-9089-3C2929D5BB69</key>
-			<dict>
-				<key>items</key>
-				<array>
-					<string>DC8B46FB-8ADA-45EA-8F36-94C807A0D302</string>
-					<string>------------------------------------</string>
-					<string>2F96136B-0193-42F5-90FC-B6F456A3AD77</string>
-				</array>
-				<key>name</key>
-				<string>Language</string>
-			</dict>
-		</dict>
-	</dict>
+	<string>Support for TypeScript.</string>
 	<key>name</key>
-	<string>JavaScript</string>
+	<string>TypeScript</string>
 	<key>uuid</key>
-	<string>AAB4FD74-73F9-11D9-B89A-000D93589AF6</string>
+	<string>1E0FA830-AE0C-11E3-A5E2-0800200C9A66</string>
 </dict>
 </plist>
